@@ -38,7 +38,7 @@ AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
 # Find nautilus-burn
-PKG_CHECK_MODULES(BURN, libnautilus-burn >= 2.13.93)
+PKG_CHECK_MODULES(BURN, libnautilus-burn >= 2.15.3)
 AC_SUBST(BURN_CFLAGS)
 AC_SUBST(BURN_LIBS)
 
