@@ -1,3 +1,11 @@
+2006-06-05  Ross Burton  <ross@burtonini.com>
+
+	* configure.in:
+	* libjuicer/sj-metadata-musicbrainz.c:
+	* src/sj-main.c:
+	* src/sj-play.c:
+	Update for new n-c-b API (#342603, thanks William Jon McCann)
+
 2006-05-17  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
